--- a/src/results_notebook/Notebook_Final_Limpio_Espanol.ipynb
+++ b/src/results_notebook/Notebook_Final_Limpio_Espanol.ipynb
@@ -401,12 +401,13 @@
     }
    ],
    "source": [
-    "joblib.dump(mejor_modelo, \"model.pkl\")"
+    "columnas_modelo = X.columns.tolist()\n",
+    "joblib.dump((mejor_modelo, columnas_modelo), \"model.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "2b277e21",
    "metadata": {},
    "outputs": [
@@ -460,7 +461,7 @@
        " 'Nivel_educativo_Universidad_sin_titulo']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
