--- a/src/results_notebook/Notebook_CamelCase_Corregido_Final.ipynb
+++ b/src/results_notebook/Notebook_CamelCase_Corregido_Final.ipynb
@@ -42,34 +42,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 📌 LIMPIEZA Y RENOMBRADO DE VARIABLES CLAVE\n",
     "df = pd.read_csv(r\"C:\\Users\\javid\\OneDrive\\Escritorio\\Javidev\\ProjectML_Prediccion_Salarios_IT\\data\\survey_results_public.csv\", low_memory=False)\n",
     "\n",
     "# Renombramos las columnas más importantes\n",
     "df = df.rename(columns={\n",
-    "    \"Employment\": \"Tipo_empleo\",\n",
-    "    \"RemoteWork\": \"Trabajo_remoto\",\n",
+    "    \"Employment\": \"TipoEmpleo\",\n",
+    "    \"RemoteWork\": \"TrabajoRemoto\",\n",
     "    \"DevType\": \"Rol\",\n",
-    "    \"EdLevel\": \"Nivel_educativo\",\n",
-    "    \"YearsCodePro\": \"Anios_experiencia\",\n",
+    "    \"EdLevel\": \"NivelEducativo\",\n",
+    "    \"YearsCodePro\": \"AniosExperiencia\",\n",
     "    \"Country\": \"Pais\",\n",
-    "    \"OrgSize\": \"Tamano_empresa\",\n",
-    "    \"ConvertedCompYearly\": \"Salario_anual\"\n",
+    "    \"OrgSize\": \"TamanoEmpresa\",\n",
+    "    \"ConvertedCompYearly\": \"SalarioAnual\"\n",
     "})\n",
     "\n",
     "# Filtramos columnas relevantes\n",
     "columnas_utiles = [\n",
-    "    \"Tipo_empleo\", \"Trabajo_remoto\", \"Rol\", \"Nivel_educativo\",\n",
-    "    \"Anios_experiencia\", \"Pais\", \"Tamano_empresa\", \"Salario_anual\"\n",
+    "    \"TipoEmpleo\", \"TrabajoRemoto\", \"Rol\", \"NivelEducativo\",\n",
+    "    \"AniosExperiencia\", \"Pais\", \"TamanoEmpresa\", \"SalarioAnual\"\n",
     "]\n",
     "df = df[columnas_utiles]\n",
     "\n",
     "# Limpiamos y transformamos la experiencia profesional\n",
-    "df[\"Anios_experiencia\"] = df[\"Anios_experiencia\"].replace({\n",
+    "df[\"AniosExperiencia\"] = df[\"AniosExperiencia\"].replace({\n",
     "    \"Less than 1 year\": \"0\",\n",
     "    \"More than 50 years\": \"51\"\n",
     "})\n",
-    "df[\"Anios_experiencia\"] = pd.to_numeric(df[\"Anios_experiencia\"], errors=\"coerce\")\n",
+    "df[\"AniosExperiencia\"] = pd.to_numeric(df[\"AniosExperiencia\"], errors=\"coerce\")\n",
     "\n",
     "# Agrupamos países poco frecuentes como \"Otro\"\n",
     "top_paises = df[\"Pais\"].value_counts().head(15).index\n",
@@ -78,32 +77,31 @@
     "# Convertimos tipo_empleo en categorías resumidas\n",
     "def simplificar_tipo_empleo(valor):\n",
     "    if pd.isna(valor): return None\n",
-    "    if \"full-time\" in valor: return \"Jornada completa\"\n",
-    "    if \"part-time\" in valor: return \"Media jornada\"\n",
+    "    if \"full-time\" in valor: return \"JornadaCompleta\"\n",
+    "    if \"part-time\" in valor: return \"MediaJornada\"\n",
     "    if \"freelancer\" in valor or \"contractor\" in valor: return \"Autonomo\"\n",
     "    if \"student\" in valor: return \"Estudiante\"\n",
     "    if \"not employed\" in valor: return \"Desempleado\"\n",
     "    if \"retired\" in valor: return \"Jubilado\"\n",
     "    return \"Otro\"\n",
     "\n",
-    "df[\"Tipo_empleo\"] = df[\"Tipo_empleo\"].apply(simplificar_tipo_empleo)\n",
+    "df[\"TipoEmpleo\"] = df[\"TipoEmpleo\"].apply(simplificar_tipo_empleo)\n",
     "\n",
     "# Simplificamos modalidad de trabajo\n",
-    "df[\"Trabajo_remoto\"] = df[\"Trabajo_remoto\"].replace({\n",
+    "df[\"TrabajoRemoto\"] = df[\"TrabajoRemoto\"].replace({\n",
     "    \"Remote\": \"Remoto\",\n",
     "    \"In-person\": \"Presencial\",\n",
     "    \"Hybrid (some remote, some in-person)\": \"Hibrido\"\n",
     "})\n",
     "\n",
-    "def mapear_roles(rol_raw):\n",
+    "def mapear_rol(rol_raw):\n",
     "    mapa_roles = {\n",
     "        \"Developer, full-stack\": \"Developer_Full_Stack\",\n",
     "        \"Developer, back-end\": \"Developer_Back_End\",\n",
-    "        \"Developer, front-end\": \"Developoer_Front-End\",\n",
+    "        \"Developer, front-end\": \"Developer_Front_End\",\n",
     "        \"Developer, desktop or enterprise applications\": \"Developer_Desktop_Enterprise\",\n",
     "        \"Developer, mobile\": \"Developer_Mobile\",\n",
     "        \"Developer, embedded applications or devices\": \"Developer_Embedded_Devices\",\n",
-    "        \"Other (please specify)\": \"Otro_rol\",\n",
     "        \"Data engineer\": \"Data_Engineer\",\n",
     "        \"Engineering manager\": \"Engineering_Manager\",\n",
     "        \"DevOps specialist\": \"DevOps_Specialist\",\n",
@@ -115,31 +113,34 @@
     "    }\n",
     "\n",
     "    if pd.isna(rol_raw):\n",
-    "        return []\n",
-    "    \n",
-    "    roles = [r.strip() for r in rol_raw.split(\";\")]\n",
-    "    roles_mapeados = [mapa_roles.get(r, \"Otro\") for r in roles]\n",
-    "    return roles_mapeados\n",
+    "        return \"Otro_rol\"\n",
     "\n",
-    "df[\"Rol\"] = df[\"Rol\"].apply(mapear_roles)\n",
+    "    # Algunos registros tienen varios roles separados por ';', nos quedamos con el primero\n",
+    "    primer_rol = rol_raw.split(\";\")[0].strip()\n",
+    "\n",
+    "    # Mapear el primer rol, o poner 'Otro_rol' si no está en el diccionario\n",
+    "    return mapa_roles.get(primer_rol, \"Otro_rol\")\n",
+    "\n",
+    "# Aplicarlo\n",
+    "df[\"Rol\"] = df[\"Rol\"].apply(mapear_rol)\n",
     "\n",
     "# Simplificamos nivel educativo\n",
     "def simplificar_nivel(nivel):\n",
     "    if pd.isna(nivel): return None\n",
-    "    if \"Bachelor\" in nivel: return \"Grado universitario\"\n",
+    "    if \"Bachelor\" in nivel: return \"Grado_universitario\"\n",
     "    if \"Master\" in nivel: return \"Master\"\n",
     "    if \"Professional\" in nivel or \"Ph.D\" in nivel or \"Doctoral\" in nivel: return \"Doctorado\"\n",
     "    if \"Secondary\" in nivel: return \"Secundaria\"\n",
     "    if \"Primary\" in nivel: return \"Primaria\"\n",
-    "    if \"Associate\" in nivel: return \"Grado medio\"\n",
-    "    if \"Some college\" in nivel: return \"Universidad sin titulo\"\n",
-    "    return \"Otro\"\n",
+    "    if \"Associate\" in nivel: return \"Grado_medio\"\n",
+    "    if \"Some college\" in nivel: return \"Universidad_sin_titulo\"\n",
+    "    return \"Otro_nivel_educativo\"\n",
     "\n",
-    "df[\"Nivel_educativo\"] = df[\"Nivel_educativo\"].apply(simplificar_nivel)\n",
+    "df[\"NivelEducativo\"] = df[\"NivelEducativo\"].apply(simplificar_nivel)\n",
     "\n",
     "# Eliminamos filas nulas y salarios excesivos\n",
     "# df = df.dropna()\n",
-    "df = df[df[\"Salario_anual\"] <= 300000]\n"
+    "df = df[df[\"SalarioAnual\"] <= 300000]\n"
    ]
   },
   {
@@ -157,11 +158,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"Anios_experiencia\"] = df[\"Anios_experiencia\"].replace({\n",
+    "df[\"AniosExperiencia\"] = df[\"AniosExperiencia\"].replace({\n",
     "    \"Less than 1 year\": \"0\", \"More than 50 years\": \"51\"\n",
     "})\n",
-    "df[\"Anios_experiencia\"] = pd.to_numeric(df[\"Anios_experiencia\"], errors=\"coerce\")\n",
-    "df[\"Tamano_empresa\"] = df[\"Tamano_empresa\"].replace(\"I don’t know\", pd.NA)"
+    "df[\"AniosExperiencia\"] = pd.to_numeric(df[\"AniosExperiencia\"], errors=\"coerce\")\n",
+    "df[\"TamanoEmpresa\"] = df[\"TamanoEmpresa\"].replace(\"I don’t know\", pd.NA)"
    ]
   },
   {
@@ -172,7 +173,7 @@
    "outputs": [],
    "source": [
     "df = df.dropna()\n",
-    "df = df[df[\"Salario_anual\"] <= 300000]"
+    "df = df[df[\"SalarioAnual\"] <= 300000]"
    ]
   },
   {
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6094ab3b",
    "metadata": {},
    "outputs": [],
@@ -198,25 +199,30 @@
     "# País\n",
     "top_paises = df[\"Pais\"].value_counts().head(15).index\n",
     "df[\"Pais\"] = df[\"Pais\"].apply(lambda x: x if x in top_paises else \"Otro_pais\")\n",
-    "df = pd.get_dummies(df, columns=[\"Pais\"])\n",
-    "if \"Pais_Otro\" in df.columns:\n",
-    "    df = df.drop(columns=[\"Pais_Otro\"])\n",
     "\n",
-    "# Resto\n",
-    "df = pd.get_dummies(df, columns=[\"Tipo_empleo\", \"Trabajo_remoto\", \"Nivel_educativo\"], drop_first=False)\n",
+    "# Aquí el cambio:\n",
+    "df = pd.get_dummies(df, columns=[\"Pais\", \"TipoEmpleo\", \"TrabajoRemoto\", \"NivelEducativo\"], prefix='', prefix_sep='')\n",
     "\n",
-    "orden_empresa = [\n",
-    "    \"Just me - I am a freelancer, sole proprietor, etc.\",\n",
-    "    \"2 to 9 employees\",\n",
-    "    \"10 to 19 employees\",\n",
-    "    \"20 to 99 employees\",\n",
-    "    \"100 to 499 employees\",\n",
-    "    \"500 to 999 employees\",\n",
-    "    \"1,000 to 4,999 employees\",\n",
-    "    \"5,000 to 9,999 employees\",\n",
-    "    \"10,000 or more employees\"\n",
-    "]\n",
-    "df[\"Tamano_empresa\"] = df[\"Tamano_empresa\"].apply(lambda x: orden_empresa.index(x))"
+    "# Y como ya no hay columna \"Pais_Otro\", el drop cambia a simplemente:\n",
+    "if \"Otro_pais\" in df.columns:\n",
+    "    df = df.drop(columns=[\"Otro_pais\"])\n",
+    "\n",
+    "def traducir_tamano_empresa(x):\n",
+    "    traducciones = {\n",
+    "        \"Just me - I am a freelancer, sole proprietor, etc.\": \"Freelance\",\n",
+    "        \"2 to 9 employees\": \"2-9_empleados\",\n",
+    "        \"10 to 19 employees\": \"10-19_empleados\",\n",
+    "        \"20 to 99 employees\": \"20-99_empleados\",\n",
+    "        \"100 to 499 employees\": \"100-499_empleados\",\n",
+    "        \"500 to 999 employees\": \"500-999_empleados\",\n",
+    "        \"1,000 to 4,999 employees\": \"1000-4999_empleados\",\n",
+    "        \"5,000 to 9,999 employees\": \"5000-9999_empleados\",\n",
+    "        \"10,000 or more employees\": \"+10000_empleados\"\n",
+    "    }\n",
+    "    return traducciones.get(x, x)  # si no lo encuentra, deja el valor original\n",
+    "\n",
+    "# Aplicarlo al dataframe\n",
+    "df[\"TamanoEmpresa\"] = df[\"TamanoEmpresa\"].apply(traducir_tamano_empresa)\n"
    ]
   },
   {
@@ -234,9 +240,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for col in df.columns:\n",
-    "    if df[col].dtype == bool:\n",
-    "        df[col] = df[col].astype(int)"
+    "for col in df.select_dtypes(include=\"bool\").columns:\n",
+    "    df[col] = df[col].astype(int)"
    ]
   },
   {
@@ -250,14 +255,29 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "41e8671b",
+   "id": "a225b129",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # 2. Limpiar textos\n",
+    "# def limpiar_texto(x):\n",
+    "#     if isinstance(x, str):\n",
+    "#         x = x.strip()\n",
+    "#         x = x.replace(\"á\", \"a\").replace(\"é\", \"e\").replace(\"í\", \"i\").replace(\"ó\", \"o\").replace(\"ú\", \"u\").replace(\"ñ\", \"n\")\n",
+    "#         return x\n",
+    "#     return x\n",
+    "\n",
+    "# for columna in [\"TipoEmpleo\", \"TrabajoRemoto\", \"NivelEducativo\", \"Pais\"]:\n",
+    "#     if columna in df.columns:\n",
+    "#         df[columna] = df[columna].apply(limpiar_texto)\n",
+    "\n",
+    "# if \"Rol\" in df.columns:\n",
+    "#     df[\"Rol\"] = df[\"Rol\"].apply(lambda roles: [limpiar_texto(r) for r in roles] if isinstance(roles, list) else [])\n",
+    "\n",
     "# Preparar datos finales\n",
-    "X = df.drop(columns=\"Salario_anual\")\n",
+    "X = df.drop(columns=\"SalarioAnual\")\n",
     "X.columns = [re.sub(r\"[^a-zA-Z0-9]\", \"_\", col) for col in X.columns]\n",
-    "y = df[\"Salario_anual\"]"
+    "y = df[\"SalarioAnual\"]\n"
    ]
   },
   {
@@ -338,7 +358,7 @@
     "    n_jobs=-1\n",
     ")\n",
     "\n",
-    "grid.fit(X_train, y_train)\n",
+    "grid.fit(X_train, y_train, cat_features=[\"TamanoEmpresa\"])\n",
     "\n",
     "print(\"Mejor configuración encontrada:\")\n",
     "print(grid.best_params_)\n"
@@ -362,7 +382,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R² en test con mejores hiperparámetros: 0.5946\n"
+      "R² en test con mejores hiperparámetros: 0.5917\n"
      ]
     }
    ],
@@ -414,53 +434,52 @@
     {
      "data": {
       "text/plain": [
-       "['Anios_experiencia',\n",
-       " 'Tamano_empresa',\n",
-       " '__Developer_Full_Stack__',\n",
-       " '__Developer_Back_End__',\n",
-       " '__Otro__',\n",
-       " '__Developoer_Front_End__',\n",
-       " '__Developer_Desktop_Enterprise__',\n",
-       " '__Developer_Mobile__',\n",
-       " '__Developer_Embedded_Devices__',\n",
-       " '__Data_Engineer__',\n",
-       " '__Engineering_Manager__',\n",
-       " '__DevOps_Specialist__',\n",
-       " '__Data_Scientist_ML__',\n",
-       " '__Investigaci_n_Desarrollo__',\n",
-       " '__Investigador_Academico__',\n",
-       " '__Cloud_Infrastructure_Engineer__',\n",
-       " '__Senior_Executive__',\n",
-       " 'Pais_Australia',\n",
-       " 'Pais_Brazil',\n",
-       " 'Pais_Canada',\n",
-       " 'Pais_France',\n",
-       " 'Pais_Germany',\n",
-       " 'Pais_India',\n",
-       " 'Pais_Italy',\n",
-       " 'Pais_Netherlands',\n",
-       " 'Pais_Otro',\n",
-       " 'Pais_Otro_pais',\n",
-       " 'Pais_Poland',\n",
-       " 'Pais_Spain',\n",
-       " 'Pais_Sweden',\n",
-       " 'Pais_Ukraine',\n",
-       " 'Pais_United_Kingdom_of_Great_Britain_and_Northern_Ireland',\n",
-       " 'Pais_United_States_of_America',\n",
-       " 'Tipo_empleo_Autonomo',\n",
-       " 'Tipo_empleo_Jornada_completa',\n",
-       " 'Tipo_empleo_Media_jornada',\n",
-       " 'Trabajo_remoto_Hibrido',\n",
-       " 'Trabajo_remoto_Presencial',\n",
-       " 'Trabajo_remoto_Remoto',\n",
-       " 'Nivel_educativo_Doctorado',\n",
-       " 'Nivel_educativo_Grado_medio',\n",
-       " 'Nivel_educativo_Grado_universitario',\n",
-       " 'Nivel_educativo_Master',\n",
-       " 'Nivel_educativo_Otro',\n",
-       " 'Nivel_educativo_Primaria',\n",
-       " 'Nivel_educativo_Secundaria',\n",
-       " 'Nivel_educativo_Universidad_sin_titulo']"
+       "['AniosExperiencia',\n",
+       " 'TamanoEmpresa',\n",
+       " 'Developer_Full_Stack',\n",
+       " 'Developer_Back_End',\n",
+       " 'Otro_rol',\n",
+       " 'Developer_Front_End',\n",
+       " 'Developer_Desktop_Enterprise',\n",
+       " 'Developer_Mobile',\n",
+       " 'Developer_Embedded_Devices',\n",
+       " 'Data_Engineer',\n",
+       " 'Engineering_Manager',\n",
+       " 'DevOps_Specialist',\n",
+       " 'Data_Scientist_ML',\n",
+       " 'Investigaci_n_Desarrollo',\n",
+       " 'Investigador_Academico',\n",
+       " 'Cloud_Infrastructure_Engineer',\n",
+       " 'Senior_Executive',\n",
+       " 'Australia',\n",
+       " 'Brazil',\n",
+       " 'Canada',\n",
+       " 'France',\n",
+       " 'Germany',\n",
+       " 'India',\n",
+       " 'Italy',\n",
+       " 'Netherlands',\n",
+       " 'Otro',\n",
+       " 'Poland',\n",
+       " 'Spain',\n",
+       " 'Sweden',\n",
+       " 'Ukraine',\n",
+       " 'United_Kingdom_of_Great_Britain_and_Northern_Ireland',\n",
+       " 'United_States_of_America',\n",
+       " 'Autonomo',\n",
+       " 'JornadaCompleta',\n",
+       " 'MediaJornada',\n",
+       " 'Hibrido',\n",
+       " 'Presencial',\n",
+       " 'Remoto',\n",
+       " 'Doctorado',\n",
+       " 'Grado_medio',\n",
+       " 'Grado_universitario',\n",
+       " 'Master',\n",
+       " 'Otro_nivel_educativo',\n",
+       " 'Primaria',\n",
+       " 'Secundaria',\n",
+       " 'Universidad_sin_titulo']"
       ]
      },
      "execution_count": 13,
