--- a/src/results_notebook/Notebook_CamelCase_Corregido_Final.ipynb
+++ b/src/results_notebook/Notebook_CamelCase_Corregido_Final.ipynb
@@ -37,14 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "db6b20ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"C:\\Users\\javid\\OneDrive\\Escritorio\\Javidev\\ProjectML_Prediccion_Salarios_IT\\data\\survey_results_public.csv\", low_memory=False)\n",
+    "df = pd.read_csv(\"../data_sample/data_sample.csv\")\n",
     "\n",
-    "# Renombramos las columnas más importantes\n",
     "df = df.rename(columns={\n",
     "    \"Employment\": \"TipoEmpleo\",\n",
     "    \"RemoteWork\": \"TrabajoRemoto\",\n",
@@ -56,25 +55,21 @@
     "    \"ConvertedCompYearly\": \"SalarioAnual\"\n",
     "})\n",
     "\n",
-    "# Filtramos columnas relevantes\n",
     "columnas_utiles = [\n",
     "    \"TipoEmpleo\", \"TrabajoRemoto\", \"Rol\", \"NivelEducativo\",\n",
     "    \"AniosExperiencia\", \"Pais\", \"TamanoEmpresa\", \"SalarioAnual\"\n",
     "]\n",
     "df = df[columnas_utiles]\n",
     "\n",
-    "# Limpiamos y transformamos la experiencia profesional\n",
     "df[\"AniosExperiencia\"] = df[\"AniosExperiencia\"].replace({\n",
     "    \"Less than 1 year\": \"0\",\n",
     "    \"More than 50 years\": \"51\"\n",
     "})\n",
     "df[\"AniosExperiencia\"] = pd.to_numeric(df[\"AniosExperiencia\"], errors=\"coerce\")\n",
     "\n",
-    "# Agrupamos países poco frecuentes como \"Otro\"\n",
     "top_paises = df[\"Pais\"].value_counts().head(15).index\n",
     "df[\"Pais\"] = df[\"Pais\"].apply(lambda x: x if x in top_paises else \"Otro\")\n",
     "\n",
-    "# Convertimos tipo_empleo en categorías resumidas\n",
     "def simplificar_tipo_empleo(valor):\n",
     "    if pd.isna(valor): return None\n",
     "    if \"full-time\" in valor: return \"JornadaCompleta\"\n",
@@ -87,7 +82,6 @@
     "\n",
     "df[\"TipoEmpleo\"] = df[\"TipoEmpleo\"].apply(simplificar_tipo_empleo)\n",
     "\n",
-    "# Simplificamos modalidad de trabajo\n",
     "df[\"TrabajoRemoto\"] = df[\"TrabajoRemoto\"].replace({\n",
     "    \"Remote\": \"Remoto\",\n",
     "    \"In-person\": \"Presencial\",\n",
@@ -115,16 +109,12 @@
     "    if pd.isna(rol_raw):\n",
     "        return \"Otro_rol\"\n",
     "\n",
-    "    # Algunos registros tienen varios roles separados por ';', nos quedamos con el primero\n",
     "    primer_rol = rol_raw.split(\";\")[0].strip()\n",
     "\n",
-    "    # Mapear el primer rol, o poner 'Otro_rol' si no está en el diccionario\n",
     "    return mapa_roles.get(primer_rol, \"Otro_rol\")\n",
     "\n",
-    "# Aplicarlo\n",
     "df[\"Rol\"] = df[\"Rol\"].apply(mapear_rol)\n",
-    "\n",
-    "# Simplificamos nivel educativo\n",
+    "o\n",
     "def simplificar_nivel(nivel):\n",
     "    if pd.isna(nivel): return None\n",
     "    if \"Bachelor\" in nivel: return \"Grado_universitario\"\n",
@@ -138,8 +128,6 @@
     "\n",
     "df[\"NivelEducativo\"] = df[\"NivelEducativo\"].apply(simplificar_nivel)\n",
     "\n",
-    "# Eliminamos filas nulas y salarios excesivos\n",
-    "# df = df.dropna()\n",
     "df = df[df[\"SalarioAnual\"] <= 300000]\n"
    ]
   },
@@ -186,24 +174,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6094ab3b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Rol\n",
     "roles_dummies = df[\"Rol\"].str.get_dummies(sep=\";\")\n",
     "top_roles = roles_dummies.sum().sort_values(ascending=False).head(15).index\n",
     "df = pd.concat([df.drop(columns=\"Rol\"), roles_dummies[top_roles]], axis=1)\n",
     "\n",
-    "# País\n",
     "top_paises = df[\"Pais\"].value_counts().head(15).index\n",
     "df[\"Pais\"] = df[\"Pais\"].apply(lambda x: x if x in top_paises else \"Otro_pais\")\n",
     "\n",
-    "# Aquí el cambio:\n",
     "df = pd.get_dummies(df, columns=[\"Pais\", \"TipoEmpleo\", \"TrabajoRemoto\", \"NivelEducativo\"], prefix='', prefix_sep='')\n",
     "\n",
-    "# Y como ya no hay columna \"Pais_Otro\", el drop cambia a simplemente:\n",
     "if \"Otro_pais\" in df.columns:\n",
     "    df = df.drop(columns=[\"Otro_pais\"])\n",
     "\n",
@@ -219,10 +203,9 @@
     "        \"5,000 to 9,999 employees\": \"5000-9999_empleados\",\n",
     "        \"10,000 or more employees\": \"+10000_empleados\"\n",
     "    }\n",
-    "    return traducciones.get(x, x)  # si no lo encuentra, deja el valor original\n",
+    "    return traducciones.get(x, x)\n",
     "\n",
-    "# Aplicarlo al dataframe\n",
-    "df[\"TamanoEmpresa\"] = df[\"TamanoEmpresa\"].apply(traducir_tamano_empresa)\n"
+    "df[\"TamanoEmpresa\"] = df[\"TamanoEmpresa\"].apply(traducir_tamano_empresa)"
    ]
   },
   {
@@ -254,30 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a225b129",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # 2. Limpiar textos\n",
-    "# def limpiar_texto(x):\n",
-    "#     if isinstance(x, str):\n",
-    "#         x = x.strip()\n",
-    "#         x = x.replace(\"á\", \"a\").replace(\"é\", \"e\").replace(\"í\", \"i\").replace(\"ó\", \"o\").replace(\"ú\", \"u\").replace(\"ñ\", \"n\")\n",
-    "#         return x\n",
-    "#     return x\n",
-    "\n",
-    "# for columna in [\"TipoEmpleo\", \"TrabajoRemoto\", \"NivelEducativo\", \"Pais\"]:\n",
-    "#     if columna in df.columns:\n",
-    "#         df[columna] = df[columna].apply(limpiar_texto)\n",
-    "\n",
-    "# if \"Rol\" in df.columns:\n",
-    "#     df[\"Rol\"] = df[\"Rol\"].apply(lambda roles: [limpiar_texto(r) for r in roles] if isinstance(roles, list) else [])\n",
-    "\n",
-    "# Preparar datos finales\n",
     "X = df.drop(columns=\"SalarioAnual\")\n",
     "X.columns = [re.sub(r\"[^a-zA-Z0-9]\", \"_\", col) for col in X.columns]\n",
-    "y = df[\"SalarioAnual\"]\n"
+    "y = df[\"SalarioAnual\"]"
    ]
   },
   {
@@ -332,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ca4b270d",
    "metadata": {},
    "outputs": [
@@ -361,7 +328,7 @@
     "grid.fit(X_train, y_train, cat_features=[\"TamanoEmpresa\"])\n",
     "\n",
     "print(\"Mejor configuración encontrada:\")\n",
-    "print(grid.best_params_)\n"
+    "print(grid.best_params_)"
    ]
   },
   {
@@ -374,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c82e4428",
    "metadata": {},
    "outputs": [
@@ -387,12 +354,11 @@
     }
    ],
    "source": [
-    "# Evaluación en test\n",
     "mejor_modelo = grid.best_estimator_\n",
     "y_pred = mejor_modelo.predict(X_test)\n",
     "r2 = r2_score(y_test, y_pred)\n",
     "\n",
-    "print(f\"R² en test con mejores hiperparámetros: {r2:.4f}\")\n"
+    "print(f\"R² en test con mejores hiperparámetros: {r2:.4f}\")"
    ]
   },
   {
@@ -423,72 +389,6 @@
    "source": [
     "columnas_modelo = X.columns.tolist()\n",
     "joblib.dump((mejor_modelo, columnas_modelo), \"model.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "2b277e21",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['AniosExperiencia',\n",
-       " 'TamanoEmpresa',\n",
-       " 'Developer_Full_Stack',\n",
-       " 'Developer_Back_End',\n",
-       " 'Otro_rol',\n",
-       " 'Developer_Front_End',\n",
-       " 'Developer_Desktop_Enterprise',\n",
-       " 'Developer_Mobile',\n",
-       " 'Developer_Embedded_Devices',\n",
-       " 'Data_Engineer',\n",
-       " 'Engineering_Manager',\n",
-       " 'DevOps_Specialist',\n",
-       " 'Data_Scientist_ML',\n",
-       " 'Investigaci_n_Desarrollo',\n",
-       " 'Investigador_Academico',\n",
-       " 'Cloud_Infrastructure_Engineer',\n",
-       " 'Senior_Executive',\n",
-       " 'Australia',\n",
-       " 'Brazil',\n",
-       " 'Canada',\n",
-       " 'France',\n",
-       " 'Germany',\n",
-       " 'India',\n",
-       " 'Italy',\n",
-       " 'Netherlands',\n",
-       " 'Otro',\n",
-       " 'Poland',\n",
-       " 'Spain',\n",
-       " 'Sweden',\n",
-       " 'Ukraine',\n",
-       " 'United_Kingdom_of_Great_Britain_and_Northern_Ireland',\n",
-       " 'United_States_of_America',\n",
-       " 'Autonomo',\n",
-       " 'JornadaCompleta',\n",
-       " 'MediaJornada',\n",
-       " 'Hibrido',\n",
-       " 'Presencial',\n",
-       " 'Remoto',\n",
-       " 'Doctorado',\n",
-       " 'Grado_medio',\n",
-       " 'Grado_universitario',\n",
-       " 'Master',\n",
-       " 'Otro_nivel_educativo',\n",
-       " 'Primaria',\n",
-       " 'Secundaria',\n",
-       " 'Universidad_sin_titulo']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(X.head().columns)"
    ]
   }
  ],
